--- a/wiki/CR_SmartQuotes.wiki
+++ b/wiki/CR_SmartQuotes.wiki
@@ -1,5 +1,5 @@
 #summary Enables auto-complete and easy delete of single and double quotes.
-= Description =
+= Introduction =
 
 This plugin brings auto complete of quotes to CodeRush. Features are based on auto complete of parens and brackets, which are supported out of the box:
   * Auto complete of single and double quotes
@@ -16,6 +16,10 @@ There is some additional logic in "auto complete" feature:
 = Installation =
 
 Installation instructions can be found on the InstallInstructions page.
+
+= Usage =
+
+This plugin works "as you type". There is no need for additional steps to activate its features.
 
 = Options =
 
