--- a/wiki/Refactor_SplitStringContrib.wiki
+++ b/wiki/Refactor_SplitStringContrib.wiki
@@ -35,7 +35,7 @@ SplitStringContrib is fully configurable. Options page can be found in "Editor/R
 
 = Known Issues =
 
-VB developers may prefer "&" instead of "+" as concatenation operator. This is currently not supported, because this is limitation of "Split String" refactoring. Please track http://www.devexpress.com/Support/Center/p/B135602.aspx?searchtext=split+string&p=T4%7CP6%7C0 suggestion to bump this issue up in DevExpress priority queue.
+VB developers may prefer "&" instead of "+" as concatenation operator. This is currently not supported, because this is limitation of "Split String" refactoring. Please track http://www.devexpress.com/Support/Center/p/B135602.aspx suggestion to bump this issue up in DevExpress priority queue.
 
 = Credits =
 
