--- a/Refactor_UpdateNamespace/Refactor_UpdateNamespace/Refactor_UpdateNamespacePlugIn.resx
+++ b/Refactor_UpdateNamespace/Refactor_UpdateNamespace/Refactor_UpdateNamespacePlugIn.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="refactoringUpdateNamespace.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>17, 54</value>
   </metadata>
   <data name="refactoringUpdateNamespace.Description" xml:space="preserve">
     <value>Updates existing Namespace declaration to reflect the containing Project's default settings; useful for when classes are relocated from one project to another (e.g, after extract-to-file refactoring, etc.)</value>
@@ -131,6 +131,9 @@
         8J+BIgAygBJMkWaw6ymxfdQASOyNBuJoGADTAQARBN8+1t/aZAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="wrongNamespaceIssueProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>215, 54</value>
+  </metadata>
   <metadata name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </metadata>
