Edited wiki page through web user interface.

--- a/wiki/CR_SettingsMonitor.wiki
+++ b/wiki/CR_SettingsMonitor.wiki
@@ -6,7 +6,7 @@ This plugin determines the location of your settings and then watches them using
 
 === Details === 
 
-Thi plugin enables 2 specific scenarios:
+This plugin enables 2 specific scenarios:
  * CodeRush option changes in one instance of visual studio will be immediately reflected in another.
  * CodeRush option changes sync'd to one machine from another via service like Live Mesh will be immediately loaded into any running copies of Studio on the destination machine.
 
