--- a/wiki/PluginPageTemplate.wiki
+++ b/wiki/PluginPageTemplate.wiki
@@ -1,24 +1,36 @@
-#summary Template for pages that describe plugin functionality.
+#summary Highlights possible stack overflow problems in properties that call themselves recursively.
 #labels Phase-Design
 
 = Introduction =
 
-Give a one or two sentence description of the problem the plugin solves here. (Don't forget to fill in the summary with a short, one-sentence description of the plugin proper.) The introduction is like a problem statement and solution description. If there are external blog links that explain why things are the way they are, you may want to put them here.
+This plugin adds 1 code issue together with 2 possible fixes:
+  * 'StackOverflowException in runtime' code issue
+  * 'Change to base call' refactoring - available when code issue is reported for overriden property. Changes recursive call into call to base implementation of property
+  * 'Change to field call' refactoring - available always when code issue is reported. Changes recursive call into field call.
 
-If you have a screen shot of the plugin in action, you can put it here or in the "Usage" section, below.
+'StackOverflowException in runtime' code issue is reported when property calls itself recusively. Below code will report 2 issues, first for return statement in getter and second for assignment in setter:
+{{{
+public string PropertyName
+{
+    get
+    {
+        return PropertyName;
+    }
+    set
+    {
+        PropertyName = value;
+    }
+}
+}}}
 
 = Installation =
 
-Refer users to the InstallInstructions page for general instructions on putting the plugin assembly in the right spot and put additional install instructions for the plugin here. For example, if the plugin requires a shortcut key binding, explain to the user what they need to do to add it.
+Installation instructions can be found on the InstallInstructions page.
 
 = Usage =
 
-Describe how to use your plugin here. If the plugin does different things, here's where you explain them all. You may also want to put screen shots here.
-
-= Options =
-
-If your plugin has configuration to it, explain the various options here. You may want a screen shot of the options page to accompany it.
+This plugin integrates itself with other code issues and refactorings provided by CodeRush. Features of this plugin are language independent.
 
 = Credits =
 
-List the contributors/authors for the plugin here.
+Author: Przemysław Włodarczak.
