--- a/wiki/DX_MoveCode.wiki
+++ b/wiki/DX_MoveCode.wiki
@@ -125,7 +125,9 @@ private void SomeMethod()
 
 = Future Plans = 
 
+
  * MoveCaretUp / MoveCaretDown / MoveCaretLeft / MoveCaretRight actions. (Early version in Build 675)
  * Move Method functionality
  * Move Selection (With intelligent selection Adjustment) functionality
  * Option to use TargetPicker for Methods and Selections.
+ * Allow MoveCodeLeft, MoveCodeRight to adjest the existence braces on a c# block where the number of statements changes between 1 and 2.
