Edited wiki page through web user interface.

--- a/wiki/DX_MoveCode.wiki
+++ b/wiki/DX_MoveCode.wiki
@@ -130,4 +130,4 @@ private void SomeMethod()
  * Move Method functionality
  * Move Selection (With intelligent selection Adjustment) functionality
  * Option to use TargetPicker for Methods and Selections.
- * Allow MoveCodeLeft, MoveCodeRight to adjest the existence braces on a c# block where the number of statements changes between 1 and 2.
+ * Allow MoveCodeLeft, MoveCodeRight to adjust the existence braces on a c# block where the number of statements changes between 1 and 2.
