--- a/wiki/InstallInstructions.wiki
+++ b/wiki/InstallInstructions.wiki
@@ -2,8 +2,7 @@
 #labels Featured,Phase-Deploy
 
 =Installation=
-Note: As Pointed out in the Comments, all plugins require [http://devexpress.com/Products/Visual_Studio_Add-in/DXCore/ The DXCore] to be installed first. 
-
+Note: As pointed out in the comments, all plugins require [http://devexpress.com/Products/Visual_Studio_Add-in/DXCore/ The DXCore] to be installed first. 
 
 To install any of these plugins, download the relevant binary (DownloadInstructions) and then...
 
@@ -12,6 +11,13 @@ To install any of these plugins, download the relevant binary (DownloadInstructi
     * For DXCore 9.1.1, this path is similar to like `C:\Program Files\DevExpress 2009.1\IDETools\Community\Plugins\`)
     * For DXCore 9.1.3 or higher its more like `My docs\DevExpress\IDE Tools\Community\PlugIns`
   # Restart Visual Studio. The plugin(s) are now installed.
+
+Note: The latest DXCore provides an option to change the location of your plugin folder.
+Follow these steps to get to the 'Settings' options page:
+ # From the DevExpress menu, select "Options...".
+ # In the tree view on the left, navigate to "Core"
+ # Select the "Settings" options page.
+   # Note: This page level is Advanced, and will only be visible if the Level combo on the lower-left of the Options dialog is set to Advanced or Expert.
 
 =Usage=
 Each plugin has its own usage instructions. See the [http://code.google.com/p/dxcorecommunityplugins/w/list wiki] for more on each individual plugin.
