--- a/CR_QuickAddReference/CR_QuickAddReference/PlugIn1.resx
+++ b/CR_QuickAddReference/CR_QuickAddReference/PlugIn1.resx
@@ -134,7 +134,17 @@
   <data name="AddReferenceMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsEAAA7BAbiRa+0AAAAgSURBVDhPY2D4x/CfIkyRZpDlowaMhsFoOoBkwgHPCwAp
+        YQUAAAAJcEhZcwAADsAAAA7AAWrWiQkAAAAgSURBVDhPY2D4x/CfIkyRZpDlowaMhsFoOoBkwgHPCwAp
+        F/0Q5iDKKwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="actQuickAddReferenceSolExp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>26, 98</value>
+  </metadata>
+  <data name="actQuickAddReferenceSolExp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAgSURBVDhPY2D4x/CfIkyRZpDlowaMhsFoOoBkwgHPCwAp
         F/0Q5iDKKwAAAABJRU5ErkJggg==
 </value>
   </data>
