Edited wiki page through web user interface.

--- a/wiki/DX_CollapseFromEnd.wiki
+++ b/wiki/DX_CollapseFromEnd.wiki
@@ -17,8 +17,11 @@ Note: The glyph appears to the bottom left of the node, because studio appears t
 
 Installation instructions can be found on the InstallInstructions page.
 
+
 === Download === 
 Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/DX_CollapseFromEnd/
+
+Screencast of this plugin from here: http://tv.devexpress.com/CRDXCollapseFromBottom.movie
 
 === Usage ===
 
