--- a/wiki/CR_QuickAddReference.wiki
+++ b/wiki/CR_QuickAddReference.wiki
@@ -8,6 +8,9 @@ http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_QuickAddReference/Scre
 
 = Download = 
 Primary download is from http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_QuickAddReference/
+
+An instructional screencast about this plugin is available from: http://tv.devexpress.com/CRQuickAddReference.movie
+
 = Installation =
 
 Refer users to the InstallInstructions page for general instructions on putting the plugin assembly in the right spot and put additional install instructions for the plugin here. For example, if the plugin requires a shortcut key binding, explain to the user what they need to do to add it.
