--- a/wiki/CR_MetricShader.wiki
+++ b/wiki/CR_MetricShader.wiki
@@ -1,5 +1,7 @@
 #summary Alters the background color of members to indicate status according to a nominated Metric.
 
+<wiki:toc max_depth="1" />
+
 === Introduction ===
 
 NB: I have recently been looking back through some shared Google docs and have found evidence suggesting the original idea for this plugin was that of Dan Gilkerson (<- Great Bloke) 
