--- a/wiki/CR_MetricShader.wiki
+++ b/wiki/CR_MetricShader.wiki
@@ -1,6 +1,6 @@
 #summary Alters the background color of members to indicate status according to a nominated Metric.
 
-<wiki:toc max_depth="1" />
+[CR_MetricShader#Usage]
 
 === Introduction ===
 
