Edited wiki page through web user interface.

--- a/wiki/CR_MetricShader.wiki
+++ b/wiki/CR_MetricShader.wiki
@@ -1,8 +1,9 @@
 #summary Alters the background color of members to indicate status according to a nominated Metric.
 
 #sidebar TableOfContents
-[CR_MetricShader#Usage]
-[CR_MetricShader#Download]
+
+  * [CR_MetricShader#Usage]
+    * [CR_MetricShader#Download]
 
 === Introduction ===
 
