Edited wiki page through web user interface.

--- a/wiki/CR_MetricShader.wiki
+++ b/wiki/CR_MetricShader.wiki
@@ -2,8 +2,7 @@
 
 #sidebar TableOfContents
 
-  * [CR_MetricShader#Usage]
-    * [CR_MetricShader#Download]
+  * [CR_MetricShader#Download Download]
 
 === Introduction ===
 
