Edited wiki page through web user interface.

--- a/wiki/DX_CollapseFromEnd.wiki
+++ b/wiki/DX_CollapseFromEnd.wiki
@@ -1,31 +1,21 @@
 #summary Provides an additional glyph for collapsing
-
+[http://www.rorybecker.me.uk/DevExpress/Plugins/Community/DX_CollapseFromEnd/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://tv.devexpress.com/CRDXCollapseFromBottom.movie http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Screencast.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 === Introduction ===
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/DX_CollapseFromEnd/Screenshots/CollapseFromEnd.png
 
 Provides an additional glyph after collapsible items (see image). This is to allow nodes to be collapsed via the mouse when the top of the node is not visible on screen.
 
-Note: The glyph appears to the bottom left of the node, because studio appears to overwrite anything placed in the vacinity of the existing outlining.
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/DX_CollapseFromEnd/Screenshots/CollapseFromEnd.png
+
+Note: The glyph appears to the bottom left of the node, because studio appears to overwrite anything placed in the vicinity of the existing outlining.
+
+=== Usage ===
+
+ * Click the glyph that appears on the last line after any collapsible code structure.
 
 ==== Updates ==== 
 
  * The Glyph is now inverted and used to expand a collapsed when suitable.
  * * However this functionality is not currently surfaced in VB.net.
-
-=== Installation ===
-
-Installation instructions can be found on the InstallInstructions page.
-
-
-=== Download === 
-Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/DX_CollapseFromEnd/
-
-Screencast of this plugin from here: http://tv.devexpress.com/CRDXCollapseFromBottom.movie
-
-=== Usage ===
-
- * Click the glyph that appears on the last line after any collapsible code structure.
 
 === Credits ===
 
